content/core/1.5.0/reference/vendr-core-adapters/iproductadapter.md
---
title: IProductAdapter
description: API reference for IProductAdapter in Vendr, the eCommerce solution for Umbraco v8+
---
## IProductAdapter

```csharp
public interface IProductAdapter
```

**Namespace**
* [Vendr.Core.Adapters](../)

### Methods

#### GetProductSnapshot (1 of 2)

Get a product snapshot for the supplied product reference in the given culture.

```csharp
public IProductSnapshot GetProductSnapshot(string productReference, string languageIsoCode)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| productReference | The product reference of the product |
| languageIsoCode | The language ISO code of the culture |

---

#### GetProductSnapshot (2 of 2)

Get a product snapshot for the supplied product reference in the given culture.

```csharp
public IProductSnapshot GetProductSnapshot(string productReference, string productVariantReference, 
    string languageIsoCode)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| productReference | The product reference of the product |
| productVariantReference | The product variant reference of the product |
| languageIsoCode | The language ISO code of the culture |


---

#### TryGetProductReference

Try and get the product reference for the given SKU in the given store.

```csharp
public bool TryGetProductReference(Guid storeId, string sku, out string productReference, 
    out string productVariantReference)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| storeId | The id of the store to search in |
| sku | The SKU of the product to search for |
| productReference | The product reference of the found product, or null |
| productVariantReference | The product variant reference of the found product, or null |

**Returns**

Boolean indicating whether a product reference was found for the given SKU


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
